--- a/src/assets/styles/element.scss
+++ b/src/assets/styles/element.scss
@@ -27,7 +27,7 @@ $current-color-primary: #ff8000;
     // "warning": ("base": #e6a23c),
     // "danger": ("base": #f56c6c),
     // "error": ("base": #f56c6c),
-    // "info": ("base": #909399),
+    // "info": ("base": #909399),,,,,,,,,,,,,,,,,,,,,,,,,
   ),
 
   $text-color: (
@@ -53,7 +53,7 @@ $current-color-primary: #ff8000;
     // 'extra-light': #fafcff,
     // 'dark': #ebedf0,
     // 'darker': #e6e8eb,
-    // 'blank': #ffffff,,
+    // 'blank': #ffffff,,,,,,,,,,,,,,,,,,,,,,,,,,
   ),
   // // Background
   // $bg-color:
@@ -68,7 +68,7 @@ $current-color-primary: #ff8000;
       "base": $radius-main,
       "small": $radius-lighter,
       // 'round': 20px,
-      // 'circle': 100%,,,,
+      // 'circle': 100%,,,,,,,,,,,,,,,,,,,,,,,,,,,,
     ),
   // // Box-shadow
   $box-shadow:
@@ -105,7 +105,7 @@ $current-color-primary: #ff8000;
     (
       "bg-color": $disabled-bg,
       // "text-color": getCssVar("text-color", "placeholder"),
-      // "border-color": getCssVar("border-color", "light"),,,,,
+      // "border-color": getCssVar("border-color", "light"),
     ),
   // $common-component-size:
   //   (
@@ -150,7 +150,7 @@ $current-color-primary: #ff8000;
       // "checked-input-border-color": getCssVar("color-primary"),
       // "checked-bg-color": getCssVar("color-primary"),
       // "checked-icon-color": getCssVar("color", "white"),
-      // "input-border-color-hover": getCssVar("color-primary"),,,
+      // "input-border-color-hover": getCssVar("color-primary"),,,,,,,,,,,,,,,,,,,,,,,,,,,
     ),
   // $checkbox-button:
   //   (
@@ -183,7 +183,7 @@ $current-color-primary: #ff8000;
       // 'input-bg-color': getCssVar('fill-color', 'blank'),
       // 'input-border': getCssVar('border'),
       // 'input-border-color': getCssVar('border-color'),
-      // 'input-border-color-hover': getCssVar('color-primary'),,,,
+      // 'input-border-color-hover': getCssVar('color-primary'),,,,,,,,,,,,,,,,,,,,,,,,,,,,
     ),
   // $radio-height: ($common-component-size, $radio-height);
   // $radio-button:
@@ -240,7 +240,7 @@ $current-color-primary: #ff8000;
       // 'disabled-color': getCssVar('text-color-placeholder'),
       "height": $height-light,
       // 'hover-background': getCssVar('fill-color', 'light'),
-      // 'selected-text-color': getCssVar('color-primary'),,,
+      // 'selected-text-color': getCssVar('color-primary'),,,,,,,,,,,,,,,,,,,,,,,,,,,
     ),
   $select-group: (
     // 'text-color': getCssVar('color-info'),
@@ -321,7 +321,7 @@ $current-color-primary: #ff8000;
       // "padding": $gap-half-qtr $gap,
       "close-size": $font-size-heavy,
       // 'close-icon-color': getCssVar('text-color-placeholder'),
-      // 'close-hover-color': getCssVar('text-color-secondary'),
+      // 'close-hover-color': getCssVar('text-color-secondary'),,,,,,,,,,,,,,,,,,,,,,,,,
     ),
   // // Notification
   // // css3 var in packages/theme-chalk/src/notification.scss
@@ -345,7 +345,7 @@ $current-color-primary: #ff8000;
       "title-font-size": $font-size-heavy,
       // 'title-color': getCssVar('text-color-primary'),
       // 'close-color': getCssVar('text-color-secondary'),
-      // 'close-hover-color': getCssVar('text-color-regular'),,,,,
+      // 'close-hover-color': getCssVar('text-color-regular'),
     ),
   // // Input
   // // css3 var in packages/theme-chalk/src/input.scss
@@ -525,7 +525,7 @@ $current-color-primary: #ff8000;
       // 'title-font-size': getCssVar('font-size-large'),
       "content-font-size": $font-size-main,
       // 'font-line-height': getCssVar('font-line-height-primary'),
-      "padding-primary": $gap,
+      "padding-primary": $gap-two,
       // 'border-radius': getCssVar('border-radius-base'),
     ),
   // // Tour
@@ -554,7 +554,7 @@ $current-color-primary: #ff8000;
       "font-size": $font-size-light,
       // 'color': getCssVar('text-color-secondary'),
       // 'active-color': getCssVar('color-primary'),
-      // 'marker-bg-color': getCssVar('color-primary'),,,,,
+      // 'marker-bg-color': getCssVar('color-primary'),
     ),
   // // Segmented
   // // css3 var in packages/theme-chalk/src/segmented.scss
@@ -695,7 +695,7 @@ $current-color-primary: #ff8000;
       // 'bg-color': getCssVar('bg-color', 'overlay'),
       // 'font-size': getCssVar('font-size-base'),
       // 'border-color': getCssVar('border-color-lighter'),
-      // "padding": $gap-half-qtr,
+      "padding": $gap,
       "padding-large": $gap,
       "title-font-size": $font-size-main,
       // 'title-text-color': getCssVar('text-color-primary'),
@@ -769,22 +769,22 @@ $current-color-primary: #ff8000;
   //     'menu-index': 10,
   //   ),
   // // drawer
-  // $drawer:
-  //   (
-  //     'bg-color':
-  //       var(#{getCssVarName('dialog', 'bg-color')}, #{getCssVar('bg-color')}),
-  //     'padding-primary': var(#{getCssVarName('dialog', 'padding-primary')}, 20px),
-  //   ),
+  $drawer:
+    (
+      // 'bg-color':
+      //   var(#{getCssVarName('dialog', 'bg-color')}, #{getCssVar('bg-color')}),
+      "padding-primary": $gap-two,
+    ),
   // // Badge
   // // css3 var in packages/theme-chalk/src/badge.scss
-  // $badge:
-  //   (
-  //     'bg-color': getCssVar('color-danger'),
-  //     'radius': 10px,
-  //     'font-size': 12px,
-  //     'padding': 6px,
-  //     'size': 18px,
-  //   ),
+  $badge:
+    (
+      // 'bg-color': getCssVar('color-danger'),
+      // 'radius': 10px,
+      "font-size": $font-size-light,
+      "padding": $gap-half,
+      "size": $font-size-heavyer,
+    ),
   // // Card
   $card:
     (
