--- a/.vitepress/render/inner/_components/info/_var.scss
+++ b/.vitepress/render/inner/_components/info/_var.scss
@@ -1,5 +1,5 @@
 @use "sass:color";
-@import "../../../../../src/assets/styles/_var.scss";
+@use "../../../../../src/assets/styles/_var.scss";
 
 // $color-1: color.mix($color-primary, #fff, 30%);
 // $color-2: color.mix($color-primary, #fff, 50%);
