--- a/src/core/components/BasicSkins/size.scss
+++ b/src/core/components/BasicSkins/size.scss
@@ -107,8 +107,8 @@
   --font-size-heavyer: 14px;
   --font-size-heavy: 13px;
   --font-size-main: 12px;
-  --font-size-light: 12px;
-  --font-size-lighter: 12px;
+  --font-size-light: 11px;
+  --font-size-lighter: 10Promise下拉数组px;
   /* 盒子阴影 */
   --shadow-heavy: 0 2px 4px rgba(0, 0, 0, 0.24), 0 0 6px rgba(0, 0, 0, 0.08); // 0px 16px 48px 16px rgba(0, 0, 0, 0.08), 0px 12px 32px rgba(0, 0, 0, 0.12), 0px 8px 16px -8px rgba(0, 0, 0, 0.16),
   --shadow-main: 0 1px 2px rgba(0, 0, 0, 0.12), 0 0 4px rgba(0, 0, 0, 0.04); //  0px 12px 32px 4px rgba(0, 0, 0, 0.04), 0px 8px 20px rgba(0, 0, 0, 0.08),
