feat: 样式细节调整

--- a/src/assets/styles/element.scss
+++ b/src/assets/styles/element.scss
@@ -27,7 +27,7 @@ $current-color-primary: #ff8000;
     // "warning": ("base": #e6a23c),
     // "danger": ("base": #f56c6c),
     // "error": ("base": #f56c6c),
-    // "info": ("base": #909399),,,,,,,,,,,,,,,,,,,,,,,,,
+    // "info": ("base": #909399),,,,,,,,
   ),
 
   $text-color: (
@@ -53,7 +53,7 @@ $current-color-primary: #ff8000;
     // 'extra-light': #fafcff,
     // 'dark': #ebedf0,
     // 'darker': #e6e8eb,
-    // 'blank': #ffffff,,,,,,,,,,,,,,,,,,,,,,,,,,
+    // 'blank': #ffffff,,,,,,,,,
   ),
   // // Background
   // $bg-color:
@@ -68,7 +68,7 @@ $current-color-primary: #ff8000;
       "base": $radius-main,
       "small": $radius-lighter,
       // 'round': 20px,
-      // 'circle': 100%,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+      // 'circle': 100%,,,,,,,,,,,
     ),
   // // Box-shadow
   $box-shadow:
@@ -150,7 +150,7 @@ $current-color-primary: #ff8000;
       // "checked-input-border-color": getCssVar("color-primary"),
       // "checked-bg-color": getCssVar("color-primary"),
       // "checked-icon-color": getCssVar("color", "white"),
-      // "input-border-color-hover": getCssVar("color-primary"),,,,,,,,,,,,,,,,,,,,,,,,,,,
+      // "input-border-color-hover": getCssVar("color-primary"),,,,,,,,,,
     ),
   // $checkbox-button:
   //   (
@@ -183,7 +183,7 @@ $current-color-primary: #ff8000;
       // 'input-bg-color': getCssVar('fill-color', 'blank'),
       // 'input-border': getCssVar('border'),
       // 'input-border-color': getCssVar('border-color'),
-      // 'input-border-color-hover': getCssVar('color-primary'),,,,,,,,,,,,,,,,,,,,,,,,,,,,
+      // 'input-border-color-hover': getCssVar('color-primary'),,,,,,,,,,,
     ),
   // $radio-height: ($common-component-size, $radio-height);
   // $radio-button:
@@ -240,7 +240,7 @@ $current-color-primary: #ff8000;
       // 'disabled-color': getCssVar('text-color-placeholder'),
       "height": $height-light,
       // 'hover-background': getCssVar('fill-color', 'light'),
-      // 'selected-text-color': getCssVar('color-primary'),,,,,,,,,,,,,,,,,,,,,,,,,,,
+      // 'selected-text-color': getCssVar('color-primary'),,,,,,,,,,
     ),
   $select-group: (
     // 'text-color': getCssVar('color-info'),
@@ -321,7 +321,7 @@ $current-color-primary: #ff8000;
       // "padding": $gap-half-qtr $gap,
       "close-size": $font-size-heavy,
       // 'close-icon-color': getCssVar('text-color-placeholder'),
-      // 'close-hover-color': getCssVar('text-color-secondary'),,,,,,,,,,,,,,,,,,,,,,,,,
+      // 'close-hover-color': getCssVar('text-color-secondary'),,,,,,,,
     ),
   // // Notification
   // // css3 var in packages/theme-chalk/src/notification.scss
@@ -509,11 +509,11 @@ $current-color-primary: #ff8000;
     ),
   // // Switch
   // // css3 var in packages/theme-chalk/src/switch.scss
-  // $switch:
-  //   (
-  //     'on-color': getCssVar('color-primary'),
-  //     'off-color': getCssVar('border-color'),
-  //   ),
+  $switch:
+    (
+      // 'on-color': getCssVar('color-primary'),
+      "off-color": #ccc,
+    ),
   // // Dialog
   // // css3 var in packages/theme-chalk/src/dialog.scss
   $dialog:
@@ -650,13 +650,13 @@ $current-color-primary: #ff8000;
   //   ),
   $table-padding:
     (
-      // "large": $gap-half-qtr 0,
+      "large": $gap-half 0,
       "default": $gap-half 0,
       "small": $gap-qtr 0,
     ),
   $table-cell-padding: (
-    "large": 0 $gap,
-    // "default": 0 $gap-half-qtr,
+    "large": 0 $gap-half,
+    "default": 0 $gap-half,
     "small": 0 $gap-half,
   ),
   // // Pagination
